Bug 275463 - akonadi_mixedmaildir_resource crashes with kdepim-suite 4.6.0
Summary: akonadi_mixedmaildir_resource crashes with kdepim-suite 4.6.0
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Mixed Maildir resource (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-12 13:22 UTC by boris64
Modified: 2011-06-12 19:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description boris64 2011-06-12 13:22:16 UTC
Application: akonadi_mixedmaildir_resource (0.1)
KDE Platform Version: 4.6.4 (4.6.4)
Qt Version: 4.7.3
Operating System: Linux 3.0.0-rc2-v2k12+-00147-g33726bf-dirty x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
- What I was doing when the application crashed:

1) install new kdepim-suite (4.6.0)
2) kmail-migrator
3) start kmail
4) Run "Update folder and its subfolders" on "Kmail Folders"
5) akonadi_mixedmaildir_resource crashes from time to time

The crash can be reproduced some of the time.

-- Backtrace:
Application: Akonadi Resource (akonadi_mixedmaildir_resource), signal: Aborted
[KCrash Handler]
#6  0x00007f5a3fb5e665 in raise () from /lib64/libc.so.6
#7  0x00007f5a3fb5fadb in abort () from /lib64/libc.so.6
#8  0x00007f5a4043d964 in qt_message_output(QtMsgType, char const*) () from /usr/lib64/qt4/libQtCore.so.4
#9  0x00007f5a4043daef in qt_message(QtMsgType, char const*, __va_list_tag*) () from /usr/lib64/qt4/libQtCore.so.4
#10 0x00007f5a4043dc94 in qFatal(char const*, ...) () from /usr/lib64/qt4/libQtCore.so.4
#11 0x0000000000413055 in QList<Akonadi::Item>::first (this=0x7fffbb697050) at /usr/include/qt4/QtCore/qlist.h:269
#12 0x00000000004106d7 in CompactChangeHelper::Private::itemFetchResult (this=0xf16e40, job=<value optimized out>) at /tmp/portage/portage/kde-base/kdepim-runtime-4.6.0/work/kdepim-runtime-4.6.0/resources/mixedmaildir/compactchangehelper.cpp:119
#13 0x00000000004111d5 in CompactChangeHelper::qt_metacall (this=0xf16f10, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffbb697180) at /tmp/portage/portage/kde-base/kdepim-runtime-4.6.0/work/kdepim-runtime-4.6.0_build/resources/mixedmaildir/compactchangehelper.moc:77
#14 0x00007f5a405403ea in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#15 0x00007f5a409889e2 in KJob::result (this=<value optimized out>, _t1=0x8c4fda0) at /tmp/portage/portage/kde-base/kdelibs-4.6.4/work/kdelibs-4.6.4_build/kdecore/kjob.moc:194
#16 0x00007f5a40988a25 in KJob::emitResult (this=0x8c4fda0) at /tmp/portage/portage/kde-base/kdelibs-4.6.4/work/kdelibs-4.6.4/kdecore/jobs/kjob.cpp:312
#17 0x00007f5a434657a1 in Akonadi::Job::qt_metacall (this=0x8c4fda0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x17b1000) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.4/work/kdepimlibs-4.6.4_build/akonadi/job.moc:91
#18 0x00007f5a43455015 in Akonadi::ItemFetchJob::qt_metacall (this=0x8c4fda0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x17b1000) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.4/work/kdepimlibs-4.6.4_build/akonadi/itemfetchjob.moc:73
#19 0x00007f5a40543f9a in QObject::event(QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#20 0x00007f5a40eecde4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#21 0x00007f5a40ef1c71 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#22 0x00007f5a41bc0add in KApplication::notify (this=0x7fffbb697bd0, receiver=0x8c4fda0, event=0x174fe370) at /tmp/portage/portage/kde-base/kdelibs-4.6.4/work/kdelibs-4.6.4/kdeui/kernel/kapplication.cpp:311
#23 0x00007f5a4052d77c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#24 0x00007f5a40530ac4 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/qt4/libQtCore.so.4
#25 0x00007f5a40557f93 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib64/qt4/libQtCore.so.4
#26 0x00007f5a3bddb94d in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#27 0x00007f5a3bddc128 in g_main_context_iterate.isra.21 () from /usr/lib64/libglib-2.0.so.0
#28 0x00007f5a3bddc3b9 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#29 0x00007f5a405583ef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#30 0x00007f5a40f8fb8e in QGuiEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtGui.so.4
#31 0x00007f5a4052c982 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#32 0x00007f5a4052cb7f in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#33 0x00007f5a40530d57 in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#34 0x00007f5a43480062 in Akonadi::ResourceBase::init (r=0xf2e950) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.4/work/kdepimlibs-4.6.4/akonadi/resourcebase.cpp:390
#35 0x000000000041c936 in Akonadi::ResourceBase::init<MixedMaildirResource> (argc=<value optimized out>, argv=<value optimized out>) at /usr/include/akonadi/resourcebase.h:188
#36 0x00007f5a3fb4ad7d in __libc_start_main () from /lib64/libc.so.6
#37 0x000000000040f7e1 in _start ()

Reported using DrKonqi
Comment 1 Kevin Krammer 2011-06-12 19:50:41 UTC
Git commit 90678d427e5981588526f7fddcecb047864b1c2a by Kevin Krammer.
Committed on 12/06/2011 at 19:47.
Pushed by krake into branch '4.6'.

Check item fetch result list for being empty before getting first item

The compact change helper is only fetching the item to modify its
remote ID. If the item does not exist (anymore) it doesn't have to do
anything and just continues with the next one.
BUG: 275463

M  +7    -0    resources/mixedmaildir/compactchangehelper.cpp     

http://commits.kde.org/kdepim-runtime/90678d427e5981588526f7fddcecb047864b1c2a
Comment 2 Kevin Krammer 2011-06-12 19:52:23 UTC
Git commit 6893fd9685ab6f4311b95238b4f8a57e18452123 by Kevin Krammer.
Committed on 12/06/2011 at 19:47.
Pushed by krake into branch 'master'.

Check item fetch result list for being empty before getting first item

The compact change helper is only fetching the item to modify its
remote ID. If the item does not exist (anymore) it doesn't have to do
anything and just continues with the next one.
BUG: 275463

M  +7    -0    resources/mixedmaildir/compactchangehelper.cpp     

http://commits.kde.org/kdepim-runtime/6893fd9685ab6f4311b95238b4f8a57e18452123