Check item fetch result list for being empty before getting first item

The compact change helper is only fetching the item to modify its
remote ID. If the item does not exist (anymore) it doesn't have to do
anything and just continues with the next one.
BUG: 275463